[project]
name = "rl-pytorch"
version = "0.1.0"
description = ""
authors = [
    {name = "clay-arras",email = "astrollin.neil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "gymnasium (>=1.2.2,<2.0.0)",
    "jaxtyping (>=0.3.3,<0.4.0)",
    "torch (>=2.9.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true